fix copy service + swap detail spacings

--- a/src/app/_components/success-notice/success-notice.component.scss
+++ b/src/app/_components/success-notice/success-notice.component.scss
@@ -21,7 +21,7 @@
 		&.isMobile {
 			height: auto;
 			flex-direction: column;
-			padding: 15px;
+			padding: 10px;
 			align-items: flex-end;
 			
 			.text-content {
